@@ -1,6 +1,8 @@
 
 8.43  2020-05-18
   - Removed deprecated argument handling from Mojo::Promise::new.
+  - Fixed a bug where the resolve class method in Mojo::Promise would
+    unnecessarily create new promises.
   - Fixed a promise chaining bug in Mojo::Promise. (karjala)
 
 8.42  2020-05-04
